Updates to readme and text

--- a/homodimer.htm
+++ b/homodimer.htm
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	PROTEIN THERMODYNAMICS SIMULATIONS: Protein homodimerisation simulation
-	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
-	
+	BINDING SIMULATIONS: Protein homodimerisation simulation
+
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
@@ -172,12 +171,9 @@
 				<!-- <br /><br />
 				<a href="homodimer.htm">Protein homodimerisation simulation</a> -->
 			</nav>
-			<div id="credits">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen<br />
-				University of Eastern Finland, 2021&ndash;2023<br /><br />
-				GitHub repository: <a href="https://github.com/protsim/protsim">github.com/protsim/protsim</a><br />
-				If you use this in your own research, please cite our paper: <a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
-				Description of extra features: <a href="extensions.htm">extensions</a></span>
+			<div id="Inspired by">
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
+				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
 		<script>preinit(appmode_homodimer);</script>
