Attempt 1 at adding enzyme kinetics

--- a/index.htm
+++ b/index.htm
@@ -28,6 +28,8 @@
 				<br /><br />
 				<a href="receptors.htm">Competing receptors simulation</a>
 				<br /><br />
+				<a href="enzyme.htm">Enzyme kinetics simulation</a><br /><br />
+				<br /><br />
 				<a href="homodimer.htm">Protein homodimerisation simulation</a><br />
 			</nav>
 			<div id="Inspired by">
