--- a/index.htm
+++ b/index.htm
@@ -18,19 +18,17 @@
 			<p id="nojavascript">JavaScript must be enabled in your browser for the page to function.</p>
 		</main>
 		<footer>
+			<p id="ext_extmessage">For some extra features not described in the original paper, append <a class="ext_codeword" href="?ext">?ext</a> to the URL.<br />
 			<h2>Simulation pages</h2>
 			<nav id="linkarea">
-				<a href="ligand.htm">Ligand binding simulation</a>
-				<br /><br />
 				<a href="ligands.htm">Competing ligands simulation</a>
 				<br /><br />
 				<a href="receptors.htm">Competing receptors simulation</a>
 				<br /><br />
 				<a href="homodimer.htm">Protein homodimerisation simulation</a><br />
-				<br /><br />
 			</nav>
 			<div id="Inspired by">
-				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
+				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
 				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
