Restore  ligand-binding

--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,8 @@
 		<footer>
 			<h2>Simulation pages</h2>
 			<nav id="linkarea">
+				<a href="ligand.htm">Ligand binding simulation</a>
+ 				<br /><br />
 				<a href="ligands.htm">Competing ligands simulation</a>
 				<br /><br />
 				<a href="receptors.htm">Competing receptors simulation</a>
