Updates to text

--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a><br />
 			</nav>
 			<div id="Inspired by">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
 				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
