--- a/homodimer.htm
+++ b/homodimer.htm
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	PROTEIN THERMODYNAMICS SIMULATIONS: Protein homodimerisation simulation
-	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
+	BINDING SIMULATIONS: Protein homodimerisation simulation
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -29,7 +28,7 @@
 -->
 
 <!--
-	If you use this in your own research, please cite our paper: https://doi.org/10.1021/acsomega.2c00560
+	If you use this in your own research, please cite: https://doi.org/10.1021/acsomega.2c00560
 -->
 		
 		<title>Protein homodimerisation simulation</title>
@@ -173,11 +172,8 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a> -->
 			</nav>
 			<div id="credits">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen<br />
-				University of Eastern Finland, 2021&ndash;2023<br /><br />
-				GitHub repository: <a href="https://github.com/protsim/protsim">github.com/protsim/protsim</a><br />
-				If you use this in your own research, please cite our paper: <a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
-				Description of extra features: <a href="extensions.htm">extensions</a></span>
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
+				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
 		<script>preinit(appmode_homodimer);</script>
