--- a/receptors.htm
+++ b/receptors.htm
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		
 <!--
-	PROTEIN THERMODYNAMICS SIMULATIONS: Competing receptors simulation
+	BINDING SIMULATIONS: Competing receptors simulation
 	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
 	
 	This program is free software; you can redistribute it and/or
@@ -219,7 +219,7 @@
 				<a href="homodimer.htm">Protein homodimerisation simulation</a>
 			</nav>
 			<div id="Inspired by">
-				Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen and their paper<br />
+				Shamelessly Inspired by Johan P&auml;&auml;kk&ouml;nen, Juha Rouvinen, and Markus Seeliger<br />
 				<a href="https://doi.org/10.1021/acsomega.2c00560">doi:10.1021/acsomega.2c00560</a><span id="ext_desclink"><br />
 			</div>
 		</footer>
